objects/Environmental_Variable__c.object
<CustomObject>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <referenceTo>Environment__c</referenceTo>
        <relationshipName>Environmental_Variables</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <description>Use this field to define a Scope for this Environment Variable. For more information, please check our documentation about Environment Variables Scope.</description>
        <inlineHelpText>Use this field to define a Scope for this Environment Variable. For more information, please check our documentation about Environment Variables Scope.</inlineHelpText>
        <label>Scope</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Environment Variable</label>
    <nameField>
        <label>Environment Variable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environment Variables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Value_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Value__c )</errorConditionFormula>
        <errorDisplayField>Value__c</errorDisplayField>
        <errorMessage>Value is required</errorMessage>
    </validationRules>
</CustomObject>